overlap fixed

--- a/mainCss.css
+++ b/mainCss.css
@@ -20,7 +20,7 @@
   text-overflow: ellipsis;
 }
 .text-overflow-modal-left{
-  width: 10vw;
+  /* width: 7rem; */
   overflow: hidden;
   white-space: nowrap;
   overflow: hidden;
